tests/ui/cfg/field_sneaky.stderr
error[E0277]: the trait bound `__HiddenPinnedField: std::marker::Unpin` is not satisfied in `__Foo<'_>`
  --> $DIR/field_sneaky.rs:19:5
   |
9  | fn is_unpin<T: Unpin>() {}
   |    --------    ----- required by this bound in `is_unpin`
...
19 |     is_unpin::<Foo>(); //~ ERROR E0277
   |     ^^^^^^^^^^^^^^^ within `__Foo<'_>`, the trait `std::marker::Unpin` is not implemented for `__HiddenPinnedField`
   |
   = help: the following implementations were found:
             <__HiddenPinnedField as std::marker::Unpin>
   = note: required because it appears within the type `__Foo<'_>`
   = note: required because of the requirements on the impl of `std::marker::Unpin` for `Foo`
